--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,6 +138,12 @@ h3.noncase {
   line-height: 21px;
 }
 
+.options h3 {
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
 footer a.phone {
   font-size: 40px;
   line-height: 40px;
