добавила плюсик в список задач

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
     Остальные указывайте точечно на необходимом элементе.
 
   - Описание фоновых параметров:
-    - цвет фона,
+    + цвет фона,
     - расположение,
     - размер,
     - повторение фонового изображения.
