--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ h3 {
   text-transform: uppercase;
 }
 
-footer a.phone {
+footer .phone {
   color: var(--color-text-basic);
   font-size: 40px;
   line-height: 40px;
@@ -187,6 +187,7 @@ button {
   line-height: 20px;
   text-transform: uppercase;
 
+  /*size and color*/
   height: 36px;
   background-color: var(--color-button-basic);
   border: none;
@@ -203,7 +204,7 @@ button {
   font-size: 20px;
   line-height: 24px;
 }
-.pagination button.current,
+.pagination .current,
 .pagination .collapsed {
   color: var(--color-text-basic);
 }
@@ -242,6 +243,11 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.hero {
+  background-image: url("../images/hero.png");
+  /*width="1200" height="485"*/
 }
 
 .features {
