--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -7,7 +7,7 @@
     + насыщенность шрифта,
     + размер шрифта,
     + высота строки,
-    +/- цвет шрифта,
+    + цвет шрифта,
     + другие текстовые параметры, если требуется по макету.
   + Базовые текстовые параметры, необходимые для всего проекта, укажите на <body>.
     Остальные указывайте точечно на необходимом элементе.
@@ -20,7 +20,7 @@
     У каждого фона должен быть контрастный цвет текста.
 
 Подключите декоративные изображения в стилях:
-  - достаточно подключить несколько крупных фоновых изображений или текстур,
+  + достаточно подключить несколько крупных фоновых изображений или текстур,
     мелкие иконки можно не подключать.
 */
 :root {
@@ -60,6 +60,7 @@
   --color-form-input: #3f5e72;
   --color-form-element-1: #e5e5e5;
   --color-form-element-2: #f2f2f2;
+  --color-input-label: rgba(0, 0, 0, 0.3);
 }
 
 @font-face {
@@ -96,13 +97,163 @@ a {
 }
 
 body {
+  /*font*/
   font-family: "PTSans", Arial, Helvetica, sans-serif;
   font-weight: 400;
   color: var(--color-text-second);
   font-size: 22px;
   line-height: 26px;
+
+  /*display*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.main-header,
+main,
+.main-footer {
+  width: 1200px;
+}
+
+.main-nav,
+.main-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 0 70px;
+}
+
+.hero,
+.features,
+.search,
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.subscribe {
+  padding: 96px 258px 104px;
+}
+
+.subscribe h2 {
+  margin: 0 0 20px;
+}
+
+.subscribe p {
+  width: 475px;
+  margin: 0 0 54px;
+}
+
+.subscribe div {
+  width: 684px;
+  height: 52px;
+  display: flex;
+}
+
+.subscribe input {
+  height: 100%;
+  padding: 14px 20px;
+  box-sizing: border-box;
+  width: auto;
+  border: none;
+  background-color: var(--color-form-element-2);
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  flex: 1;
+}
+
+.subscribe button {
+  height: 100%;
+  width: 232px;
+  background-color: var(--color-button-second);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.options,
+.filter {
+  display: flex;
+  flex-direction: column;
+
+  padding: 0 70px;
+}
+
+.filter {
+  padding: 50px 70px 60px;
+}
+
+.options {
+  height: 412px;
+}
+
+.options .set-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.options .infrastructure,
+.options .housing-type,
+.options .buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.filter .filter-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cards {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  margin: -10px;
+}
+
+.card {
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  width: 300px;
+  height: 398px;
+  margin: 9px;
+  padding: 20px;
+
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  justify-content: space-between;
+}
+
+.card h3 {
+  width: 100%;
+  margin: 16px 0 0;
+}
+.card p {
+  width: 140px;
+  margin: 16px 0 0;
+}
+.card .price {
+  text-align: right;
+}
+.card button {
+  width: 140px;
+  margin: 16px 0 0;
+}
+.card .rating {
+  width: 300px;
+  height: 37px;
+  margin: 16px 0 0;
+}
+
+/*Заменить на локальные стили?*/
 h1 {
   font-weight: 700;
   font-size: 60px;
@@ -133,7 +284,9 @@ h3 {
   line-height: 24px;
   text-transform: capitalize;
 }
-
+.options h3 {
+  color: var(--color-text-background-default);
+}
 .options label {
   font-size: 18px;
   line-height: 23px;
@@ -152,13 +305,18 @@ h3 {
   line-height: 21px;
 }
 
+.filter select {
+  border-color: var(--color-form-element-1);
+  color: var(--color-text-second);
+}
+
 .card .rating {
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
 }
 
-footer .phone {
+.main-footer .phone {
   color: var(--color-text-basic);
   font-size: 40px;
   line-height: 40px;
@@ -172,6 +330,11 @@ input,
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  border-radius: 4px;
+}
+.price label {
+  color: var(--color-input-label);
+  background-color: var(--color-form-element-2);
 }
 .price input,
 .modal-window input {
@@ -204,9 +367,30 @@ button {
   font-size: 20px;
   line-height: 24px;
 }
-.pagination .current,
+.pagination {
+  display: flex;
+  justify-content: flex-start;
+}
+.pagination button,
+.pagination .collapsed {
+  width: 60px;
+  height: 60px;
+  margin: 0 4px;
+  background-color: var(--color-button-second);
+}
+.pagination button:first-child {
+  margin-left: 0;
+}
+.pagination .current {
+  color: var(--color-text-basic);
+  background-color: var(--color-form-element-2);
+}
 .pagination .collapsed {
   color: var(--color-text-basic);
+  background-color: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .breadcrumbs,
@@ -229,20 +413,7 @@ span.error {
 
 .options {
   background-image: url("../images/background-filter.jpg");
-}
-
-body {
-  width: 1200px;
-}
-
-.hero,
-.features,
-.search,
-.subscribe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  color: var(--color-text-background-default);
 }
 
 .hero {
@@ -302,4 +473,10 @@ body {
 }
 .features-list .souvenirs::before {
   content: url("../images/icons-features.svg");
+}
+
+.main-footer {
+  height: 120px;
+  padding: 40px 70px 30px;
+  box-sizing: border-box;
 }
