--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,6 +80,11 @@ body {
   color: var(--color-text-second);
   font-size: 22px;
   line-height: 26px;
+
+  /*display*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
@@ -146,6 +151,11 @@ input {
 }
 /*main-nav*/
 .main-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
   padding: 0 70px;
 }
 .main-nav a {
@@ -158,6 +168,11 @@ input {
 
 /*main footer*/
 .main-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
   width: 1200px;
   height: 120px;
   padding: 40px 70px 30px;
@@ -175,6 +190,11 @@ input {
   height: 415px;
   padding: 96px 258px 104px;
   box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 .main-page .subscribe {
   background: url("../images/background-subscribe.jpg") no-repeat;
@@ -190,6 +210,7 @@ input {
 .subscribe div {
   width: 684px;
   height: 52px;
+  display: flex;
 }
 .subscribe input {
   height: 100%;
@@ -200,6 +221,7 @@ input {
   background-color: var(--color-form-element-2);
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+  flex: 1;
 }
 .subscribe button {
   height: 100%;
@@ -213,6 +235,10 @@ input {
 
 /*hero*/
 .hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 .hero::before {
   content: "";
@@ -225,12 +251,22 @@ input {
 
 /*features*/
 .features {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 .features-list {
   height: 384px;
+  display: flex;
+  flex-direction: row;
 }
 .features-list div {
   width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .features-list p {
   font-family: "PTSans", Arial, Helvetica, sans-serif;
@@ -243,6 +279,7 @@ input {
   width: 800px;
 }
 .features-list.reverse {
+  flex-direction: row-reverse;
 }
 /*.features-list.alone*/
 .features-list.alone div {
@@ -288,6 +325,11 @@ input {
 /*search*/
 .search {
   height: 406px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 .search button {
   font-size: 20px;
@@ -301,6 +343,8 @@ input {
   background-size: cover;
 
   padding: 0 70px;
+  display: flex;
+  flex-direction: column;
   color: var(--color-text-background-default);
 }
 /*breadcrumbs*/
@@ -310,6 +354,9 @@ input {
 }
 /*filter-options*/
 .filter .set-filter-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .filter h3 {
   font-weight: 700;
@@ -325,6 +372,9 @@ input {
 .filter .infrastructure,
 .filter .housing-type,
 .filter .buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .price-range label {
   font-family: "PTSans", Arial, Helvetica, sans-serif;
@@ -342,10 +392,16 @@ input {
 
 /*result*/
 .result {
+  display: flex;
+  flex-direction: column;
+
   padding: 50px 70px 60px;
 }
 /*view-options*/
 .view-options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .view-order {
   font-family: "PTSans", Arial, Helvetica, sans-serif;
@@ -358,6 +414,9 @@ input {
 }
 /*cards*/
 .cards {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
   margin: -10px;
 }
 /*card*/
@@ -368,6 +427,11 @@ input {
   height: 398px;
   margin: 9px;
   padding: 20px;
+
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  justify-content: space-between;
 }
 .card h3 {
   width: 100%;
@@ -401,6 +465,8 @@ input {
 
 /*pagination*/
 .pagination {
+  display: flex;
+  justify-content: flex-start;
 }
 .pagination button,
 .pagination .collapsed {
@@ -422,6 +488,9 @@ input {
 .pagination .collapsed {
   color: var(--color-text-basic);
   background-color: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*modal-window*/
